syntax = "proto3";

package v1.channel;
option go_package = "mistapi/src/protos/v1/channel";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service ChannelService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc GetById(GetByIdRequest) returns (GetByIdResponse);
  rpc ListServerChannels(ListServerChannelsRequest)
      returns (ListServerChannelsResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

// ----- STRUCTURES -----
message Channel {
  string id = 1;
  string name = 2;
  string appserver_id = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

// ----- REQUEST/RESPONSE -----
message CreateRequest {
  string name = 1;
  string appserver_id = 2;
}
message CreateResponse { Channel channel = 1; }

message GetByIdRequest { string id = 1; }
message GetByIdResponse { Channel channel = 1; }

message ListServerChannelsRequest {
  google.protobuf.StringValue name = 1;
  string appserver_id = 2;
}
message ListServerChannelsResponse { repeated Channel channels = 1; }

message DeleteRequest { string id = 1; }
message DeleteResponse {}
